fix: aircraft type filters missing color
Fixes #145

--- a/resources/sass/components.scss
+++ b/resources/sass/components.scss
@@ -176,6 +176,11 @@ img.flag{
     }
 }
 
+.text-flight-success{
+    color: #2fbb7a !important;
+    font-weight: bold;
+}
+
 .scenery-row{
     margin: 0;
     padding: 0.75rem 1rem 1rem 1rem;
